Closed Bug 557896 Opened 16 years ago Closed 14 years ago

Display OpenGL info on error console

Categories

(Core :: Graphics, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bas.schouten, Assigned: bas.schouten)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch Display info for OpenGL usage (obsolete) — Splinter Review
For the time being we don't have about:gfx yet. We should display some info on the error console indicating when the OpenGL layer manager is being initialized succesfully, and some data about what OpenGL version is being used to assist in debugging issues. The attached patch gives some information, for example on my laptop it outputs: OpenGL LayerManager Initialized Succesfully. Version: 3.0.0 Vendor: NVIDIA Corporation Renderer: GeForce GT 230M/PCI/SSE2
Attachment #437652 - Flags: review?(joe)
Hopefully this improves string usage.
Attachment #437652 - Attachment is obsolete: true
Attachment #437652 - Flags: review?(joe)
Comment on attachment 437662 [details] [diff] [review] Display info for OpenGL usage v2 >+ console->LogStringMessage(msg.BeginReading()); I think that you should just use .get() here. r=me otherwise!
Attachment #437662 - Flags: review+
Hey! I filed this as 556325! Do you hate me?
(In reply to comment #3) > Hey! I filed this as 556325! Do you hate me? You already know the answer to that!
(In reply to comment #3) > Hey! I filed this as 556325! Do you hate me? :( I wasn't on the CC list nor the assignee. I simply missed it.
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
(In reply to Bas Schouten (:bas.schouten) from comment #0) > Created attachment 437652 [details] [diff] [review] > Display info for OpenGL usage > > For the time being we don't have about:gfx yet. We should display some info > on the error console Can we remove this now that there's a "Graphics" section (added by bug 586046?) in about:support? Having this message displayed in the Error Console each time a window is opened is noisy.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: