Bug 557896: Display information on the error console when using a OpenGL layer manager. r=joedrew